# locust-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
examples/basic/: locustfile.py
examples/kubernetes_mcp/: locustfile.py
examples/mock_server/: locustfile.py
experiments/mcp-gateway-overhead/: generate_cpu_plots.py  generate_plots.py  generate_rampup_plots.py  locustfile.py  mcp_client.py  run_distributed.sh  run_distributed_1s.sh  run_init_test.sh  run_rampup.sh
experiments/mcp-gateway-overhead/configs/: infrastructure-1s.yaml  infrastructure.yaml  template_distributed.yaml  template_gateway.yaml  template_rampup.yaml  template_rampup_single.yaml  template_server.yaml
k8s/infrastructure/: mock-server-1s.yaml  mock-server.yaml
k8s/templates/: distributed.yaml  gateway.yaml  rampup-single.yaml  rampup.yaml  server-direct.yaml
mock-servers/perf-mock-server/: Dockerfile  deployment.yaml  go.mod  main.go
mock-servers/perf-mock-server-1s/: Dockerfile  deployment.yaml  go.mod  main.go
src/locust_mcp/: __init__.py  client.py  user.py
